# workspace

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  install.bat  install.sh  keystore  polaris-docs  set-gemini-env.cmd  set-gemini-env.ps1  set-gemini-env.sh
.claude/: CLAUDE.md  connect-gemini.sh  settings.local.json  start-mcp-server.sh
.claude/mcp/: gemini-client-config.json  server-config.json
.gemini/: GEMINI.md  collaboration-indicators.md  config.yaml  consult-all-specification.md  settings-backup.json  settings.json
.gemini/mcp/: README-monitoring.md  README-windows.md  WSL-SETUP.md  claude-mcp-logs.ps1  claude-mcp-logs.sh  context-sharing-template.md  diagnose-gemini.ps1  fix-mcp-connection.md  gemini-workaround.ps1  mcp-status.sh  monitor-claude-mcp.ps1  monitor-claude-mcp.sh  monitor-claude.bat  test-claude-connection.sh  test-gemini-standalone.ps1  test-mcp-connection.ps1  test-wsl-claude.ps1  view-logs.bat
.polaris-docs/: index.json
hot_reload_sample/: .gitignore  MODULE.bazel  WINDOWS_SETUP.md  build_debug.sh  build_release.bat  package.jsonc  run_build.bat
hot_reload_sample/bazel-bin/common/: common.dll-0.params  common.lib-0.params  common_af3f29eb.dll-0.params  common_dll_impl.lib-0.params  common_lib.lib-0.params  common_lib_af3f29eb.dll-0.params  common_shared.dll-0.params
hot_reload_sample/bazel-bin/host/: dummy_test.exe-0.params  dummy_test.exe.repo_mapping  host.exe-0.params  hot_reload_host.exe-0.params  hot_reload_host.exe.runfiles_manifest  hot_reload_host_lib.lib-0.params  hot_reload_host_lib.lo.lib-0.params  hot_reload_host_lib_30f5a8.dll-0.params
hot_reload_sample/bazel-bin/host/dummy_test.exe.runfiles/: MANIFEST
hot_reload_sample/bazel-hot_reload_sample/: .bazelrc  BUILD.bazel  WINDOWS_SETUP.md  WORKSPACE  build_debug.bat  build_release.sh  run_debug_with_watch.bat  run_debug_with_watch.ps1  watch.bat
hot_reload_sample/bazel-hot_reload_sample/bazel-out/: volatile-status.txt
hot_reload_sample/bazel-hot_reload_sample/host/: BUILD.bazel  Logger.cpp  main.cpp
hot_reload_sample/bazel-hot_reload_sample/interfaces/: IEngineContext.h  Logger.h
hot_reload_sample/bazel-hot_reload_sample/modules/game_logic/: BUILD.bazel  EngineContext.cpp
hot_reload_sample/bazel-hot_reload_sample/tools/: deploy.bzl  run_build.bat  run_debug_with_watch.ps1
hot_reload_sample/bazel-out/: stable-status.txt
hot_reload_sample/host/: game_logic_loader.cpp  game_logic_loader.h
hot_reload_sample/interfaces/: BUILD.bazel
hot_reload_sample/modules/game_logic/: EngineContext.cpp
hot_reload_sample/tools/: BUILD.bazel  build_debug.bat  build_release.bat  run_debug_with_watch.bat  setup_clion_windows.bat  sync_build_output.ps1  watch.bat
(+21 files in other folders)
